crates/vexor-compiler/tests/golden/error/input/match_empty.vx
let r = 100
// empty match
let result = match r { }
export result
